GPU/CUDA.Physics/CUDA.Physics/x64/Debug/CUDA.Physics.log
  Compiling CUDA source file kernel.cu...
  
  D:\Development\MillerInc\PhysInteractive\MillerInc.PhysicsEngine\GPU\CUDA.Physics>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.6\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\14.40.33807\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.6\include" -I"C:\SDKs\vcpkg\installed\x64-windows\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.6\include"  -G   --keep-dir CUDA.Physics\x64\Debug  -maxrregcount=0   --machine 64 --compile -cudart static  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/FdCUDA.Physics\x64\Debug\vc143.pdb" -o D:\Development\MillerInc\PhysInteractive\MillerInc.PhysicsEngine\GPU\CUDA.Physics\CUDA.Physics\x64\Debug\kernel.cu.obj "D:\Development\MillerInc\PhysInteractive\MillerInc.PhysicsEngine\GPU\CUDA.Physics\kernel.cu" 
D:\Development\MillerInc\PhysInteractive\MillerInc.PhysicsEngine\GPU\CUDA.Physics/kernel.cu(24): error : function "addKernel" has already been defined (previous definition at line 24)
    __declspec(__global__) void addKernel(int *c, const int *a, const int *b)
                                ^
  
D:\Development\MillerInc\PhysInteractive\MillerInc.PhysicsEngine\GPU\CUDA.Physics/kernel.cu(30): error : function "main" has already been defined (previous definition at line 30)
    int main()
        ^
  
D:\Development\MillerInc\PhysInteractive\MillerInc.PhysicsEngine\GPU\CUDA.Physics/kernel.cu(59): error : function "addWithCuda" has already been defined (previous definition at line 59)
    cudaError_t addWithCuda(int *c, const int *a, const int *b, unsigned int size)
                ^
  
  3 errors detected in the compilation of "D:/Development/MillerInc/PhysInteractive/MillerInc.PhysicsEngine/GPU/CUDA.Physics/kernel.cu".
  kernel.cu
C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Microsoft\VC\v170\BuildCustomizations\CUDA 12.6.targets(799,9): error MSB3721: The command ""C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.6\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\14.40.33807\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.6\include" -I"C:\SDKs\vcpkg\installed\x64-windows\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.6\include"  -G   --keep-dir CUDA.Physics\x64\Debug  -maxrregcount=0   --machine 64 --compile -cudart static  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/FdCUDA.Physics\x64\Debug\vc143.pdb" -o D:\Development\MillerInc\PhysInteractive\MillerInc.PhysicsEngine\GPU\CUDA.Physics\CUDA.Physics\x64\Debug\kernel.cu.obj "D:\Development\MillerInc\PhysInteractive\MillerInc.PhysicsEngine\GPU\CUDA.Physics\kernel.cu"" exited with code 2.
